--- a/Poker Texas Hold' Em/Poker Texas Hold' Em.csproj
+++ b/Poker Texas Hold' Em/Poker Texas Hold' Em.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Barajas.cs" />
+    <Compile Include="Cartas.cs" />
+    <Compile Include="Jugador.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
